--- a/frontend/src/app/features/loan-officer/profile/lo-profile.component.html
+++ b/frontend/src/app/features/loan-officer/profile/lo-profile.component.html
@@ -82,10 +82,10 @@
           </h5>
         </div>
         <div class="card-body">
-          <div class="info-row">
+          <!-- <div class="info-row">
             <span class="fw-semibold text-muted">Officer ID</span>
             <span class="fw-semibold" style="color: var(--text-primary);">#{{ profile.officerId }}</span>
-          </div>
+          </div> -->
           <div class="info-row">
             <span class="fw-semibold text-muted">Specialization</span>
             <span class="fw-semibold" style="color: var(--text-primary);">{{ profile.loanType }}</span>
